--- a/jp_progressRpt-4-26-2017.html
+++ b/jp_progressRpt-4-26-2017.html
@@ -1,11 +1,12 @@
-﻿<pre>
+<pre>
 jp_goals_coding_lab.html
 
 Will finish Learn Ruby the Hard Way book
 Will continue converting website
 
 
-
+jp_progressRpt-4-27-2017.html
+completed Learn Ruby the Hardway ex 33
 
 -----------------------------------------------------------------
 jp_progressRpt-4-26-2017.html
