--- a/text.html
+++ b/text.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+<!-- saved from url=(0059)file:///C:/Users/Student/Desktop/Test%20CSS%20Box/text.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
@@ -27,23 +27,24 @@
 <body>
 
 <div class="header">
-  <h1>Chania</h1>
+  <h1>Alameda</h1>
 </div>
 
 <div class="menu">
   <ul>
     <li>The Flight</li>
     <li>The City</li>
-    <li>The Island</li>
+    <li>The Beach</li>
     <li>The Food</li>
   </ul>
 </div>
 
 <div class="main">
   <h1>The City</h1>
-  <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+  <p>Alameda is a beautiful place to visit in the bay area with a beautiful beach, parks, restaurants and great shops this City has been around for over 50 years and not to mention it has it's own County {the County of Alameda} which oversees Oakland and many other citys. </p>
   <p>Resize the browser window to see how the content respond to the resizing.</p>
 </div>
 
-</body>
-</html>
+
+
+</body></html>
