--- a/text2.html
+++ b/text2.html
@@ -11,10 +11,13 @@ function myFunction() {
 <body>
 
 <h2>JavaScript in Head</h2>
+<h2>JavaScript in Body</h2>
 
 <p id="demo">A BUG.</p>
 
 <button type="button" onclick="myFunction()">Try it</button>
+
+<h2>JavaSript in Closing</h2>
 
 </body>
 </html> 
